--- a/app/view/css/Colors.css
+++ b/app/view/css/Colors.css
@@ -1,17 +1,31 @@
 :root{
-    --Color0:       #846DF8;
-    --Color1:       #5F6CD9;
-    --Color2:       #75A2F0;
-    --Color3:       #5FACD9;
-    --Color4:       #6DE9F8;
-    --Colorfont:    #fff;
-    --ColorMainFont:#000;
-    --Button:       #99c793;
-    --ButtonActive: #497f42;
-    --Success:      #33FF3C;
-    --Error:        #FF0000;
-    --ColorX: repeating-linear-gradient( var(--Color0), var(--Color1), var(--Color2), var(--Color3), var(--Color4));
-    /* --ColorX: #eff; */
+    /* --Color0:       #846DF8; */
+    /* --Color1:       #5F6CD9; */
+    /* --headerColor:       #75A2F0; */
+    /* --Color3:       #5FACD9; */
+    /* --Color4:       #6DE9F8; */
+
+
+    --Color0:           #5C848C;
+    --Color1:           #384549;
+    --Color3:           #CFCECD;
+    --Color4:           #767B7B;
+    --headerColor:      #f8f9fa;
+    --brdColor:         #505050;
+    /* --menuColor:        rgba(110, 235, 249,0.5); */
+    --menuColor:            #ffffff;
+    --shadow:               #000000;
+    --shadow2:                rgba(0, 0, 0, 0.4);
+
+    --Colorfont:        var(--Color4);
+    --ColorMainFont:    #000000;
+    --Button:           #497f42;
+    --ButtonActive:     #13ce66;
+    --Success:          #33FF3C;
+    --Error:            #FF0000;
+    --font1:              ;
+    --font2:              ;
+    --font3:            #D5DBDB;
+    --bgColor:            #ffffff;
 }
 
-.hidden{display: none;}
