--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -1,7 +1,7 @@
 @import "Colors.css";
 @import "menu.css";
 html, body {
-    background: var(--ColorX);
+    background: var(--bgColor);
     /* width: 100%; */
     padding: 0%;
     /* border: forestgreen dashed 2px; */
@@ -50,9 +50,10 @@ html, body {
     width: 100%;
     height: 80px;
     display: inline-flex;
-    background-color: var(--Color2);
+    background-color: var(--headerColor);
     justify-content: space-around;
     color: var(--ColorMainFont);
+    box-shadow: 0px 0px 20px var(--shadow);
     /* padding: 0%; */
     /* overflow: auto; */
 }
@@ -99,7 +100,8 @@ html, body {
     height: 2.2rem;
     bottom:  0%;
     width: 100%;
-    background-color: var(--Color2);
+    background-color: var(--headerColor);
+    box-shadow: 0px 0px 20px var(--shadow);
     /* border: darkblue dashed 1px; */
 }
 
