--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -1,58 +1,34 @@
 
 .list {
     list-style: none;
-    /* margin-top: 110px; */
     justify-content: space-around;
-    /* position: sticky; */
-    /* position: static; */
-    /* position: relative; */
-    /* position: ; */
-    /* display: block; */
     width: 50%;
     max-width: 300px;
-    /* height: calc(100% * 6); */
-    /* height: 50%; */
-    /* height: 0px; */
     height: 500px;
-    /* margin-left: 0%; */
-    /* min-height: 600px; */
     position: absolute;
     float: right;
     right: 0%;
     top:80px;
-    /* margin-top: -100%; */
-    /* float: inline-start; */
-    /* top: 0%; */
-    transform: translateX(100%);
-    background-color: rgba(110, 235, 249,0.5);
+    transform: translateX(110%);
+    background-color: var(--menuColor);
     transition: all 0.5s;
     border-radius: 20px 0 0 20px;
     -webkit-border-radius: 20px 0 0 20px;
     -moz-border-radius: 20px 0 0 20px;
     display: block;
-    /* display: none; */
-    /* overflow-x: hidden; */
+    box-shadow: 0px 0px 20px var(--shadow);
 }
 
 .list li {
     transform: translateX(100%);
     text-align: left;
-    /* margin-top: 0%; */
-    /* margin-top: auto; */
-    /* margin-bottom: calc(100% / 6); */
     font-size: 28px;
-    /* padding: 20%; */
-    /* height: 0%; */
     max-height: 80px;
-    /* justify-content: space-between; */
-    /* max-height: 70px; */
     font-weight:bold;
     cursor: pointer;
     height: calc(100% / 9);
     margin-top: calc(100% / 8);
-    /* display: block; */
-    /* position: absolute; */
-    /* position: relative; */
+    /* padding-top: 20px; */
   }
     
   
@@ -71,12 +47,14 @@
     border-bottom-width: 1px;
     border-top-style: solid;
     border-bottom-style: solid;
-    border-top-color: rgba(255,255,255,0.5);
-    border-bottom-color: rgba(255,255,255,0.5);
+    border-top-color: var(--brdColor);
+    border-bottom-color: var(--brdColor);
     transform: scale(0.1, 1);
-    /* margin-top: 20px; */
-    /* margin-bottom: 40%; */
+    top: -10px
+    /* border-spacing: 20px; */
+    /* padding-top: 20px; */
   }
+
   .list li:hover {
     letter-spacing: 2px;
   }
@@ -85,22 +63,28 @@
     transform: scale(1.2, 1); 
   }
   .list li::after {
-    content: '';
-    position: absolute;
     transition: all 0.3s;
+    position: relative;
+    float: right;
+    padding-right: 50px;
   }
   .list li:hover::after {
-    opacity: 0; 
-    transform: scale(0.1, 1);
+    position: relative;
+    float: right;
   }
+
+
+  .list #li_camera::after{font-family: "FontAwesome"; content: '\f030';}
+  .list #li_profile::after{font-family: "FontAwesome"; content: '\f2bd';}
+  .list #li_home::after{font-family: "Font Awesome 5 Free"; content: '\f015';}
+  .list #li_settings::after{font-family: "FontAwesome"; content: '\f085';}
+  .list #li_logout::after{font-family: "Font Awesome 5 Free"; content: '\f2f5';}
   
 
 .img {
     width: 80px;
     height: 80px;
     right: 0%;
-    /* position: relative; */
-    /* left: calc(0% - 40px); */
     cursor: pointer;
     border-radius: 50%;
 }
@@ -115,9 +99,9 @@
       height: 100px;
       width: 100px;
     }
-    /* .show, .show li{
-      display: inline-block;
-    } */
+    .list{
+      top:110px;
+    }
   }
 
   
