add carte of now post
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/app/view/css/Colors.css
+++ b/app/view/css/Colors.css
@@ -16,6 +16,7 @@
     --menuColor:            #ffffff;
     --shadow:               #000000;
     --shadow2:                rgba(0, 0, 0, 0.4);
+    --headPost:               #F08080;
 
     --Colorfont:        var(--Color4);
     --ColorMainFont:    #000000;
