--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -50,7 +50,8 @@ html, body {
     width: 100%;
     height: 65px;
     display: inline-flex;
-    background-color: var(--headerColor);
+    /* background-color: var(--headerColor); */
+    background-color: var(--headPost);
     justify-content: space-around;
     color: var(--ColorMainFont);
     box-shadow: 0px 0px 20px var(--shadow);
