--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -1,8 +1,9 @@
 
 .stickers{
-    /* border: yellowgreen dashed 2px; */
-    height: 50px;
+    height: 55px;
     width: 100%;
+    box-shadow: 0px 0px 10px var(--shadow);
+    border-radius: 5px;
 }
 
 .stickers img {
@@ -10,33 +11,23 @@
     width: 40px;
     border-radius: 50%;
     cursor: pointer;
-    /* cursor: move; */
 }
 .filter{
-    /* border: 1px dashed red; */
     width: 40px;
     height: 40px;
     padding: 0%;
     margin: 0%;
     border-radius: 50%;
-    /* position: relative; */
     position: absolute;
-    /* resize: both; 
-    overflow-y: hidden; */
 }
-/* #canva_id img, #video_id img{ */
+
 .filter img{
-    /* width: 40px;
-    height: 40px; */
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    /* display: inline-flex; */
-    /* position: absolute; */
     box-sizing: border-box;
     padding: 0%;
     margin: 0%;
-    /* transform: rotate(0deg); */
 }
 
 
@@ -49,23 +40,9 @@
     right: 0%;
     padding: 0%;
     margin: 0%;
-    /* cursor: nwse-resize; */
     cursor: se-resize;
     background-color: black;
-    /* display: none; */
 }
-
-/* .filter .rotate{
-    width: 4px;
-    height: 4px;
-    position: absolute;
-    top: 0%;
-    right: 0%;
-    margin: 0%;
-    padding: 0%;
-    cursor: pointer;
-    background-color: green;
-} */
 
 .filter .delet{
     width: 5px;
@@ -81,17 +58,6 @@
     font-size: 12px;
 }
 
-/* .resize .bottomRight{
-    width: 5px;
-    height: 5px;
-    position: absolute;
-    margin: 0%;
-    padding: 0%;
-    bottom: 0%;
-    right: 0%;
-    background-color: black;
-} */
-
 .filter .bottomLeft{
     width: 5px;
     height: 5px;
@@ -101,50 +67,52 @@
     bottom: 0%;
     left: 0%;
     cursor: pointer;
-    /* cursor: nesw-resize; */
     background-color: black;
 
 }
 
-
-/* .resize div{cursor: nesw-resize;} */
-
 .contener_video{
     display: inline-flex;
+    /* display: inline-block; */
+    position: relative;
     width: 100%;
     height: 100%;
+    min-width: 600px;
+    /* padding-bottom: 100px; */
+    background-color: cornflowerblue;
 }
 
-/* .control {
-    display: inline-block;
-} */
-
 #video_id{
-    /* border: darkviolet dashed 2px; */
     width: 600px;
     height: 300px;
     margin-right: 0.5%;
-    /* background-color: gainsboro; */
     max-width: 800px;
     max-height: 800px;
     padding: 0%;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 #canva_id{
     width: 600px;
     height: 300px;
     margin-left: 0.5%;
-    /* display: block; */
     position: relative;
     padding: 0%;
-    /* right: 0%; */
-    margin: 0%;
+    display: block;
+    /* margin: 0%; */
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-bottom: 80px; */
 }
 #canva, #video {
     padding: 0%;
     margin: 0%;
     border: 1px dashed darkturquoise;
+    display: block;
+    /* padding-bottom: 100px; */
 }
 
 .hidden-stickers img{display: none;}
@@ -162,8 +130,6 @@
 
 .btncaptuerIn{
     position: absolute;
-    /* left: 18%; */
-    /* margin-top: 10px; */
     opacity: 0.5;
     display: none;
 }
@@ -187,32 +153,38 @@
     opacity: 0;
 }
 
+.buttomBtn{
+    background-color: chocolate;
+    margin-top: 40px;
+}
+
+
 #hiddenCanva{display: none;}
 
-/* botton in posts */
 
-
-
-/* @media only screen and (max-width: 1200){
-    .contener_video{
-        display: inline-block;
-        height: 100%;
-    }
-} */
 
 @media only screen and (max-width: 1200px){
     .leftBtn{left: 5%;}
     .rightBtn{right: 5%;}
-    .contener_video{height: 100%; display: inline-block;}
-    /* #video_id{width: 99%; height: 49%;}
-    #canva_id{width: 99%; height: 49%; margin-left: 0.5%;} */
-    /* #hidden_canva{display: none;} */
+    .contener_video{
+        /* height: auto; */
+        display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        /* margin-bottom: 40px; */
+        /* padding-bottom: 100px; */
+        /* background-color: chartreuse; */
+    }
+    /* .contener_canva */
     .out-form{width: 97%;}
     .btncaptuer{display: none;}
     .btncaptuerIn{
-        display: inline-block;
+
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: -8px;
-        left: 230px;
+        /* position: relative; */
         height: 5px;
         padding: 1px 40px;
     }
