--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -51,6 +51,7 @@
 .modal-show{
   width: 600px;
   height: 500px;
+  box-shadow: 0px 0px 20px var(--shadow);
 }
 
 .btn-1{left: 20px;}
@@ -63,7 +64,7 @@
 }
 
 .modal-show .Btn{
-  display: block;
+  display: block !important;
 }
 
 .modal-show img{
@@ -81,7 +82,7 @@
 .cancel::before{content: "\f00d";}
 
 .Btn{
-  display: none;
+  display: none !important;
   bottom: 20px;
 }
 
