--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -3,7 +3,7 @@
 .contener_camera{
     display: block;
     max-width: 1300px;
-    background-color: violet;
+    /* background-color: violet; */
 }
 
 .Btn {
@@ -84,26 +84,15 @@
 }
 
 .contener_video{
-    /* display: inline-table; */
-    /* position: relative; */
     display: inline-flex;
     width: 100%;
     height: 100%;
-    /* max-width: 1300px; */
-    /* min-width: 200px; */
     margin: auto !important;
-    /* margin-left: auto;
-    margin-right: auto; */
-    background-color: white;
-    box-shadow: 0px 0px 10px var(--shadow)
 }
 
 #video_id{
     width: 600px;
     height: 300px;
-    /* max-width: 800px; */
-    /* max-height: 800px; */
-    padding: 0%;
     position: relative;
 
 }
@@ -112,23 +101,19 @@
     width: 600px;
     height: 300px;
     position: relative;
-    padding: 0%;
 }
 
 #canva_id, #video_id{
-    /* display: block !important; */
     margin: auto !important;
 }
 
 #canva, #video {
     display: block !important;
+    display: table-cell;
     margin: auto !important;
-    /* margin-left: auto !important;
-    margin-right: auto !important; */
     box-shadow: 0px 0px 10px var(--shadow);
-    /* margin-top: 5px;
-    margin-bottom: 5px; */
     border-radius: 5px;
+    padding: 0%;
 
 }
 
@@ -142,7 +127,6 @@
 }
 
 .btncaptuerIn{
-    /* position: absolute; */
     opacity: 0.5;
     display: none !important;
 }
@@ -167,32 +151,28 @@
     opacity: 0;
 }
 
-/* .buttomBtn{
-    grid-template-columns: auto auto auto;
-} */
 
 
 #hiddenCanva{display: none;}
 
 
+.thumbnails{
+    display: block;
+    max-width: 1300px;
+}
 
-@media only screen and (max-width: 1200px){
-    /* .leftBtn{left: 5%;} */
-    /* .rightBtn{right: 5%;} */
+
+
+@media only screen and (max-width: 1250px){
     .contener_video{
-        /* height: auto; */
         display: block;
-        /* margin-left: auto;
-        margin-right: auto; */
-        /* margin-bottom: 40px; */
-        /* padding-bottom: 100px; */
-        /* background-color: chartreuse; */
     }
-    /* .contener_canva */
+    #canva_id{
+        margin-top: 10px !important;
+    }
     .out-form{width: 97%;}
     .btncaptuer{display: none !important;}
     .btncaptuerIn{
-
         display: block !important;
         margin-left: auto;
         margin-right: auto;
@@ -202,15 +182,9 @@
     }
     .btncaptuerIn:hover{
         margin-top: -60px;
-        /* height: 25px; */
         padding: 1rem 50px;
         height: 25px;
         width: 40px;
-        /* left: 250px; */
-        /* padding: 1rem; */
     }
 
-    /* .btncaptuerIn::before{
-        right: 75%;
-      } */
 }
