--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -10,7 +10,7 @@ html, body {
     overflow: auto;
     overflow-x: hidden;
     min-height: 650px;
-    position: relative;
+    /* position: relative; */
 
 }
 
@@ -20,27 +20,38 @@ html, body {
     font-style: oblique;
 }
 
+.error{
+    color: var(--Error);
+}
+
 .content {
     height: auto;
-    margin-bottom: 3rem;
-    /* margin: 0%;
-    padding: 0%; */
+    margin-top: auto;
     padding-left: 5px;
     padding-right: 5px;
-    overflow-x: hidden;
-    /* background-color: lawngreen; */
+    overflow: hidden;
+    padding-top: 4rem;
 }
 
 
 .navBar {
     width: 100%;
     height: 65px;
+    display: block;
     display: inline-flex;
     background-color: var(--headPost);
     justify-content: space-around;
     color: var(--ColorMainFont);
     box-shadow: 0px 0px 20px var(--shadow);
     position: fixed;
+    z-index: 1000;
+    transition: all 0.5s;
+
+}
+
+.navHidden{
+    /* transform: scaleX(100%); */
+    transform: translateY(-110%);
 }
 
 .navBar a{
