--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -5,7 +5,7 @@
     width: 50%;
     max-width: 300px;
     height: 500px;
-    position: absolute;
+    position: fixed;
     float: right;
     right: 0%;
     top:80px;
