start add new comment
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/app/view/css/Posts.css
+++ b/app/view/css/Posts.css
@@ -140,7 +140,7 @@
     margin-top: 50%;
 }
 
-.comment_like .contener_like .error{
+.comment_like .contener_like .feedback{
     justify-self: center;
     margin: auto;
 }
