finesh add comment to DB && start get all comments of post
Signed-off-by: alizaynoune <jokir.zaynoune@gmail.com>

--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -17,6 +17,7 @@
     -moz-border-radius: 20px 0 0 20px;
     display: block;
     box-shadow: 0px 0px 20px var(--shadow);
+    z-index: 2;
 }
 
 .list li {
