--- a/app/view/css/Posts.css
+++ b/app/view/css/Posts.css
@@ -13,11 +13,41 @@
   margin-right: auto;
   display: block;
   max-width: 700px;
-  overflow-y: hidden;
+  overflow: hidden;
   box-shadow: 0px 0px 20px var(--shadow);
   border-radius: 20px;
   margin-bottom: 20px;
 }
+.post .pop_window{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 65px;
+    height: 65px;
+    width: 100%;
+    position: relative;
+}
+
+.pop_window .Btn {
+    position: absolute !important;
+}
+
+.pop_window .YESBtn{
+    grid-column-start: 1;
+    /* margin-right: 5px; */
+}
+
+.pop_window .error{
+    grid-column-start: 2;
+    justify-self: center;
+}
+
+
+
+.pop_window .NOBtn{
+    grid-column-start: 3;
+    justify-self: end;
+}
+
 .post .info .delet_post{
     cursor: pointer;
     color: var(--Colorfont);
@@ -117,13 +147,13 @@
 
 .dislike, .like{
     font-size: 15px;
-    color: var(--Colorfont);
-    padding-left: 5px;
+    color: var(--ColorSCfont);
+    /* padding-left: 5px; */
 }
 
 .comment_like .contener_like {
     display: grid;
-    grid-template-columns: 50px 40px auto 100px;
+    grid-template-columns: 60px auto 100px;
     grid-template-rows: 40px;
     width: 80px;
     height: 40px;
@@ -135,10 +165,10 @@
     justify-self: center;
 }
 
-.comment_like .contener_like span:first-of-type{
+/* .comment_like .contener_like span:first-of-type{
     justify-self: start;
     margin-top: 50%;
-}
+} */
 
 .comment_like .contener_like .feedback{
     justify-self: center;
@@ -181,11 +211,16 @@
     margin-right: auto;
 }
 
-.contener_comment .comment .old_comment *{
+/*  */
+/*  */
+/* .contener_comment .comment .old_comment *{
     display: inline-flex;
-}
-
-.contener_comment .comment .old_comment{
+} */
+/*  */
+/* 
+ */
+/*  */
+ .contener_comment .comment .old_comment{
     width: 96%;
     margin-top: 20px;
     border-radius: 10px;
@@ -194,8 +229,16 @@
     box-shadow: 0px 2px 2px var(--shadow2);
     margin-left: auto;
     margin-right: auto;
-    padding: 0%;
-    margin-bottom: 20px;
+    height: auto;
+    display: grid;
+    overflow-x: hidden;
+    /* padding: 0%; */
+    /* margin-bottom: 20px; */
+
+    grid-template-columns: 10% 50% 20% 10% 10%;
+    /* grid-template-columns: auto auto; */
+    grid-template-rows: auto auto auto;
+    /* grid-template-rows: 65px; */
 }
 /* ///////////////////////// */
 /* commment like and dislike */
@@ -207,10 +250,19 @@
     left: 20px;
 }
 
+.contener_comment .comment .old_comment .dislike,
+.contener_comment .comment .old_comment .like{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-self: start;
+}
+
 
 /* owner of comment */
 .contener_comment .comment .old_comment h4:first-of-type{
-    position: relative;
+    /* position: relative;
     display: block;
     width: 33%;
     margin-left: auto;
@@ -218,7 +270,14 @@
     top: -42px;
     margin-bottom: -42px;
     text-align: center;
-    cursor: pointer;
+    cursor: pointer; */
+
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-self: center;
+    margin: auto;
 }
 
 /* botton delet comment */
@@ -231,56 +290,79 @@
 }
 
 .contener_comment .comment .old_comment .delet_comment{
-    display: block;
+    /* display: block;
     position: relative;
     width: 33%;
     float: right;
     top: -20px;
     cursor: pointer;
     text-align: right;
-    margin-bottom: -20px;
+    margin-bottom: -20px; */
     color: var(--ColorSCfont);
+
+    grid-column-start: 5;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-self: end;
+    /* margin: auto; */
 }
 
 .contener_comment .comment .old_comment .delet_comment:hover{color: var(--Error);}
 
-
-
-/* text of comment */
-
-.contener_comment .comment .old_comment p:first-of-type{
-    width: 78%;
-    text-align: center;
-    padding-left: 5px;
-    margin: 5px;
-}
-
 /* date creation comment */
-.contener_comment .comment .old_comment p:last-of-type{
-    position: relative;
+.contener_comment .comment .old_comment p:first-of-type{
+    /* position: relative;
     width: 20%;
     display: block;
     float: right;
     padding: 0%;
     margin: 0%;
-    text-align: center;
-    color: var(--Colorfont);
+    text-align: center; */
+
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-self: end;
+    color: var(--ColorSCfont);
+    margin-bottom: auto;
+    margin-top: auto;
+    /* margin: auto; */
+}
+
+/* text of comment */
+
+.contener_comment .comment .old_comment p:last-of-type{
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    justify-self: center;
+    margin: 10px 0;
+    padding: 5px;
+    width: 96%;
+    height: auto;
+    /* margin: auto; */
+    /* display: block; */
 }
 
 
+
+
 .comment_like .new_comment input[type='submit']{display: none;}
-.comment_like .new_comment #submit::before{
+.comment_like .new_comment label::before{
     font-family: "FontAwesome";
     content: "\f1d9";
 }
 
-.comment_like .new_comment #submit{
+.comment_like .new_comment label{
     cursor: pointer;
     margin: auto !important;
     font-size: 25px;
 }
 
-.comment_like .new_comment #submit:hover{color: var(--ButtonActive);}
+.comment_like .new_comment label:hover{color: var(--ButtonActive);}
 
 
 .comment_like .new_comment {
