--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -87,6 +87,7 @@
     cursor: pointer;
     border-radius: 50%;
     margin-top: 2.5px;
+    box-shadow: 0px 0px 20px var(--shadow);
     /* top: 2.5px; */
 }
 
