fix comment and title (add filter htmspecialcharachter)
Signed-off-by: alizaynoune <jokir.zaynoune@gmail.com>

--- a/app/view/css/Colors.css
+++ b/app/view/css/Colors.css
@@ -14,7 +14,8 @@
 
     --Colorfont:        #ffffff;
     --ColorMainFont:    #000000;
-    --ColorSCfont:      #767B7B;
+    /* --ColorSCfont:      #767B7B; */
+    --ColorSCfont:      #707070;
     --Button:           #497f42;
     --ButtonActive:     #13ce66;
     --Success:          #33FF3C;
