--- a/app/view/css/Posts.css
+++ b/app/view/css/Posts.css
@@ -29,6 +29,7 @@
 
 .pop_window .Btn {
     position: absolute !important;
+    background-color: var(--ColorSCfont);
 }
 
 .pop_window .YESBtn{
@@ -48,6 +49,18 @@
     justify-self: end;
 }
 
+.pop_window .NOBtn::before{
+    font-family: "FontAwesome";
+    content: "\f00d";
+    font-size: 20px;
+}
+
+.pop_window .YESBtn::before{
+    font-family: "FontAwesome";
+    content: "\f00c";
+    font-size: 20px;
+}
+
 .post .info .delet_post{
     cursor: pointer;
     color: var(--Colorfont);
@@ -61,11 +74,12 @@
 
 .post .info p{
     grid-column-start: 4;
+    grid-column-end: 4;
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: 1;
     justify-self: end;
     margin-top: 30%;
-    margin-right: 5px;
+    margin-right: 3px;
     color: var(--ColorSCfont);
 }
 
@@ -88,13 +102,14 @@
     background-color: var(--headPost);
     height: 65px;
     display: grid;
-    grid-template-columns: 60px 150px auto 150px;
+    grid-template-columns: 60px 90px auto 130px;
     grid-template-rows: 65px;
 }
 
 .post .title{
     text-align: center;
     justify-self: center;
+    font-size: 20px;
 }
 
 .post .info .owner{
@@ -104,18 +119,19 @@
     cursor: pointer;
 }
 
-.post .info #img_owner{
+.post .info .img_owner{
     width: 50px;
     height: 50px;
     border-radius: 50%;
     cursor: pointer;
     grid-column-start: 1;
+    grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: 2;
     margin: auto;
 }
 
-.post #img_post{
+.post .img_post{
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -211,6 +227,9 @@
     margin-right: auto;
 }
 
+
+
+
 /*  */
 /*  */
 /* .contener_comment .comment .old_comment *{
@@ -290,16 +309,7 @@
 }
 
 .contener_comment .comment .old_comment .delet_comment{
-    /* display: block;
-    position: relative;
-    width: 33%;
-    float: right;
-    top: -20px;
-    cursor: pointer;
-    text-align: right;
-    margin-bottom: -20px; */
     color: var(--ColorSCfont);
-
     grid-column-start: 5;
     grid-column-end: 5;
     grid-row-start: 1;
@@ -392,5 +402,25 @@
     padding-left: 10px;
 }
 
+.comment::-webkit-scrollbar {
+  width: 5px;
+  /* cursor: pointer; */
+}
+  
+  /* Track */
+.comment::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+   
+  /* Handle */
+.comment::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+  
+  /* Handle on hover */
+.comment::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    cursor: pointer;
+}
 
 
