--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -46,17 +46,19 @@ html, body {
     /* display: block; */
     /* display: inline-flex; */
     background-color: var(--headPost);
-    justify-content: space-around;
+    /* justify-content: space-around; */
     color: var(--ColorMainFont);
     box-shadow: 0px 0px 20px var(--shadow);
     position: fixed;
     z-index: 1000;
     transition: all 0.5s;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
 
 }
 
 .navHidden{
-    /* transform: scaleX(100%); */
     transform: translateY(-110%);
 }
 
@@ -71,15 +73,31 @@ html, body {
 }
 
 .navLeft{
-    position: absolute;
-    width: calc(50% - 11px);
-    left: 10px;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    margin-left: 5px;
+}
+
+.navCenter{
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    margin: auto;
 }
 
 .navRight{
-    position: absolute;
-    right:  calc(0% + 5px);
-    text-align: end;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-self: end;
+    padding: 0%;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 5px;
 }
 
 .footer{
