--- a/app/view/css/Posts.css
+++ b/app/view/css/Posts.css
@@ -61,6 +61,49 @@
     font-size: 20px;
 }
 
+
+
+.post .info .delet_post:hover{color: var(--Error);}
+
+.post .info {
+    padding: 0%;
+    box-shadow: 0px 0px 20px var(--shadow);
+    margin-bottom: 20px;
+    background-color: var(--headPost);
+    /* height: 65px; */
+    display: grid;
+    grid-template-columns: 60px 90px auto 130px;
+    grid-template-rows: auto;
+}
+.post .info .img_owner{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    margin: auto;
+    box-shadow: 0px 0px 5px 2px var(--shadow2);
+}
+
+.post .info .owner{
+    padding: 0%;
+    justify-self: start;
+    margin-top: 20%;
+    cursor: pointer;
+    margin: auto;
+    color: var(--shadow2);
+}
+
+
+.post .title{
+    text-align: center;
+    justify-self: center;
+    font-size: 20px;
+}
+
 .post .info .delet_post{
     cursor: pointer;
     color: var(--Colorfont);
@@ -72,15 +115,20 @@
     margin: 10px 10px 0px 0px;
 }
 
+/* ################## */
+/* date creation post */
+/* ################## */
+
 .post .info p{
     grid-column-start: 4;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 1;
-    justify-self: end;
+    justify-self: center;
     margin-top: 30%;
     margin-right: 3px;
     color: var(--ColorSCfont);
+    font-size: 14px;
 }
 
 .post .info .delet_post::after{
@@ -89,47 +137,6 @@
     font-size: 20px;
 }
 
-.post .info .delet_post:hover{color: var(--Error);}
-
-.post .info *{
-    display: inline;
-    padding: 0%;
-}
-.post .info {
-    padding: 0%;
-    box-shadow: 0px 0px 20px var(--shadow);
-    margin-bottom: 20px;
-    background-color: var(--headPost);
-    height: 65px;
-    display: grid;
-    grid-template-columns: 60px 90px auto 130px;
-    grid-template-rows: 65px;
-}
-
-.post .title{
-    text-align: center;
-    justify-self: center;
-    font-size: 20px;
-}
-
-.post .info .owner{
-    padding: 0%;
-    justify-self: start;
-    margin-top: 20%;
-    cursor: pointer;
-}
-
-.post .info .img_owner{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    margin: auto;
-}
 
 .post .img_post{
     display: block;
@@ -228,36 +235,24 @@
 }
 
 
-
-
-/*  */
-/*  */
-/* .contener_comment .comment .old_comment *{
-    display: inline-flex;
-} */
-/*  */
-/* 
- */
-/*  */
- .contener_comment .comment .old_comment{
-    width: 96%;
-    margin-top: 20px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    box-shadow: 0px 2px 2px var(--shadow2);
-    margin-left: auto;
-    margin-right: auto;
-    height: auto;
-    display: grid;
-    overflow-x: hidden;
-    /* padding: 0%; */
-    /* margin-bottom: 20px; */
-
-    grid-template-columns: 10% 50% 20% 10% 10%;
-    /* grid-template-columns: auto auto; */
-    grid-template-rows: auto auto auto;
-    /* grid-template-rows: 65px; */
+/* ############ */
+/* old comments */
+/* ############ */
+.contener_comment .comment .old_comment{
+   width: 96%;
+   margin-top: 20px;
+   border-radius: 10px;
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   box-shadow: 0px 2px 2px var(--shadow2);
+   margin-left: auto;
+   margin-right: auto;
+   height: auto;
+   margin-bottom: 20px;
+   display: grid;
+   overflow-x: hidden;
+   grid-template-columns: 40px 50% auto 10% 30px;
+   grid-template-rows: 30px auto auto;
 }
 /* ///////////////////////// */
 /* commment like and dislike */
@@ -275,36 +270,31 @@
     grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: 1;
-    justify-self: start;
+    justify-self: center;
+    margin: auto;
 }
 
 
+/* ################ */
 /* owner of comment */
+/* ################ */
 .contener_comment .comment .old_comment h4:first-of-type{
-    /* position: relative;
-    display: block;
-    width: 33%;
-    margin-left: auto;
-    margin-right: auto;
-    top: -42px;
-    margin-bottom: -42px;
-    text-align: center;
-    cursor: pointer; */
-
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 1;
     justify-self: center;
     margin: auto;
+    cursor: pointer;
 }
 
+/* #################### */
 /* botton delet comment */
+/* #################### */
 
 .delet_comment::after{
   font-family: "FontAwesome";
   content: "\f1f8";
-  padding-right: 10px;
   font-style: normal;
 }
 
@@ -315,21 +305,16 @@
     grid-row-start: 1;
     grid-row-end: 1;
     justify-self: end;
+    margin: 5px 5px 0px 0px;
     /* margin: auto; */
 }
 
 .contener_comment .comment .old_comment .delet_comment:hover{color: var(--Error);}
 
+/* ##################### */
 /* date creation comment */
+/* ##################### */
 .contener_comment .comment .old_comment p:first-of-type{
-    /* position: relative;
-    width: 20%;
-    display: block;
-    float: right;
-    padding: 0%;
-    margin: 0%;
-    text-align: center; */
-
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 1;
@@ -341,20 +326,20 @@
     /* margin: auto; */
 }
 
-/* text of comment */
+/* ################ */
+/* text of comment  */
+/* ################ */
 
 .contener_comment .comment .old_comment p:last-of-type{
     grid-column-start: 1;
     grid-column-end: 6;
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: auto;
+    grid-row-end: auto;
     justify-self: center;
     margin: 10px 0;
     padding: 5px;
     width: 96%;
     height: auto;
-    /* margin: auto; */
-    /* display: block; */
 }
 
 
