--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -47,7 +47,7 @@ html, body {
     /* display: inline-flex; */
     background-color: var(--headPost);
     /* justify-content: space-around; */
-    color: var(--ColorMainFont);
+    
     box-shadow: 0px 0px 20px var(--shadow);
     position: fixed;
     z-index: 1000;
@@ -56,6 +56,12 @@ html, body {
     grid-template-columns: auto auto auto;
     grid-template-rows: auto;
 
+}
+
+.navBar h1{
+    text-shadow: -4px 2px 3px var(--shadow2);
+    font-weight: bold;
+    color: var(--ColorMainFont);
 }
 
 .navHidden{
